# DwarvenModeller

./: CHANGES.md  LICENSE  MANIFEST.in  README.md  aldric.dms  box3.dms  dwarvenmodeller-r.py  dwarvenmodeller.py  dwarvenmodeller1.py  dwarvenmodeller2.py  dwarvenmodeller_feedback.md  hand.dms  innovation_booster_grant_guidelines_forecasted_expenditure.xlsx  pyproject.toml
assets/: aldric.dms  bench.dms  benchmark-text.dms  box3.dms
dms_files/: aldric-test.dms  aldric.dms  archive_icon2.dms  bench.dms  benchmark-text.dms  benchmark.dms  box3.dms  box_hier.dms  hand.dms
dms_final/: aldric-test.dms  aldric-test150.dms  aldric-test330.dms  aldric-test60.dms  aldric.dms  archive_icon.dms  bench.dms  benchmark-text.dms  benchmark.dms  box3.dms  hand.dms  knight.dms
dwarvenmodeller/: __init__.py  __main__.py  cli.py  constants.py  exporters.py  feedback.py  math_utils.py  ops.py  primitives.py  scene.py
tests/: test_dwarvenmodeller.py
